package Character;

/**
 * ENUM for characterType
 */

public enum CharacterType {
    GYMBRO,
    NERD,
    OTAKU,
    NORMAL
}